# acts-fatras

./: CMakeLists.txt  README.md
CI/: check_format_local
Core/: CMakeLists.txt
Core/include/FATRAS/Common/: IBarcodeSampler.h
Core/include/FATRAS/Simulation/: ElectronEnergyLossSampler.h  EnergyLossSampler.h  HadronicInteractionParametricSampler.h  IEnergyLossSampler.h  IHadronicInteractionSampler.h  IMultipleScatteringSampler.h  MaterialInteractionEngine.h  MultipleScatteringSamplerGaussianMixture.h  MultipleScatteringSamplerGeneralMixture.h  MultipleScatteringSamplerHighland.h  PhotonConversionSampler.h  ProcessSampler.h  SimulationEngine.h
Core/include/FATRAS/Simulation/detail/: FatrasHelpers.h  MaterialInteractionEngine.icc  PdgToParticleHypothesis.h
Core/include/Fatras/: EnergyLossSampler.hpp  HadronicInteractionParametricSampler.hpp  IEnergyLossSampler.hpp  IHadronicInteractionSampler.hpp  IMultipleScatteringSampler.hpp  IPhotonConversionSampler.hpp  Interactor.hpp  MaterialInteractionEngine.hpp  MultipleScatteringSamplerHighland.hpp  PhysicsList.hpp
Core/include/Fatras/Kernel/: Definitions.hpp  DetectorInteractor.hpp  FatrasDefinitions.hpp  Interactor.hpp  Particle.hpp  PhysicsList.hpp  Process.hpp  RandomNumberDistributions.hpp  SelectorList.hpp  Simulator.hpp
Core/include/Fatras/Kernel/detail/: EnergyLossSampler.ipp  FatrasDefinitions.hpp  LandauDistribution.hpp  LandauQuantile.hpp  RandomNumberDistributions.hpp  physics_list_implementation.hpp  physics_list_signature_check.hpp  process_signature_check.hpp  selector_list_implementation.hpp  selector_signature_check.hpp
Core/include/Fatras/Physics/EnergyLoss/: BetheBloch.hpp  BetheHeitler.hpp
Core/include/Fatras/Physics/HadronicInteraction/: ParametricNuclearInt.hpp
Core/include/Fatras/Physics/HadronicInteraction/detail/: ParametricNuclearInt.ipp
Core/include/Fatras/Physics/Scattering/: GaussianMixture.hpp  GeneralMixture.hpp  Highland.hpp  Scattering.hpp
Core/include/Fatras/Processes/: EnergyLoss.hpp  Scattering.hpp
Core/include/Fatras/Selectors/: ChargeSelectors.hpp  KinematicCasts.hpp  KinematicSelectors.hpp  LimitSelectors.hpp  PdgSelectors.hpp  SelectorHelpers.hpp
Core/include/Fatras/detail/: EnergyLossSampler.ipp  LandauQuantile.hpp  MaterialInteractionEngine.ipp  physics_list_implementation.hpp  physics_list_signature_check.hpp
Core/src/: LandauDistribution.cpp  RandomNumberDistributions.cpp
Core/src/Physics/HadronicInteraction/: ParametricNuclearInt.cpp
Core/src/Simulation/: ElectronEnergyLossSampler.cxx  ElectronEnergyLossSampler.todo  EnergyLossSampler.cxx  HadronicInteractionParametricSampler.cxx  HadronicInteractionParametricSampler.todo  MaterialInteractionEngine.cxx  MaterialInteractionEngine.todo  MultipleScatteringSamplerGaussianMixture.cxx  MultipleScatteringSamplerGaussianMixture.todo  MultipleScatteringSamplerGeneralMixture.cxx  MultipleScatteringSamplerGeneralMixture.todo  MultipleScatteringSamplerHighland.cxx  PhotonConversionSampler.cxx  PhotonConversionSampler.todo
Plugins/Geant4/: CMakeLists.txt
Plugins/Geant4/src/: B1ActionInitialization.cpp  B1DetectorConstruction.cpp  B1EventAction.cpp  B1PrimaryGeneratorAction.cpp  B1RunAction.cpp  B1SteppingAction.cpp  Geant4MaterialInteraction.cpp  MIActionInitialization.cpp  MIDetectorConstruction.cpp  MIEventAction.cpp  MIPrimaryGeneratorAction.cpp  MIRunAction.cpp  MISteppingAction.cpp  MMDetectorConstruction.cpp  MMEventAction.cpp  MMPrimaryGeneratorAction.cpp  MMRunAction.cpp  MMSteppingAction.cpp
Samplers/: CMakeLists.txt  ElectronEnergyLossSampler.cpp  ElectronEnergyLossSampler.hpp  FatrasHelpers.hpp  HadronicInteractionParametricSampler.cpp  HadronicInteractionParametricSampler.hpp  IBarcodeSampler.hpp  IDecaySampler.hpp  MultipleScatteringSamplerGaussianMixture.cpp  MultipleScatteringSamplerGaussianMixture.hpp  MultipleScatteringSamplerGaussianMixture.ipp  MultipleScatteringSamplerGeneralMixture.cpp  MultipleScatteringSamplerGeneralMixture.hpp  MultipleScatteringSamplerHighland.cpp  PhotonConversionSampler.cpp  PhotonConversionSampler.hpp  ProcessSampler.hpp  SimulationEngine.hpp
Samplers/include/Fatras/EnergyLoss/: BetheBloch.hpp
Samplers/include/Fatras/Scattering/: GaussianMixture.hpp  GeneralMixture.hpp  HighlandScatterer.hpp
Simulation/: CMakeLists.txt
Simulation/include/FATRAS/: EnergyLossSampler.h  HadronicInteractionParametricSampler.h  IEnergyLossSampler.h  IPhotonConversionSampler.h  IRandomNumbers.h  MaterialnteractionEngine.h  MultipleScatteringSamplerGaussianMixture.h  MultipleScatteringSamplerHighland.h  PdgToParticleHypothesis.h
Simulation/src/: EnergyLoss.cxx  EnergyLossSampler.cxx  MaterialInteractionEngine.cxx  MultipleScatteringSamplerHighland.cxx
Tests/: CMakeLists.txt
Tests/Common/: Particle.hpp
Tests/Core/: CMakeLists.txt  EnergyLossTests.cpp  FatrasDefinitionsTests.cpp  PhysicsListTests.cpp  PhysicsListsTests.cpp  ProcessTestUtils.hpp  ScatteringTests.cpp  SelectorListTests.cpp
Tests/Kernel/: CMakeLists.txt  EnergyLossTests.cpp  FatrasDefinitionsTests.cpp  ParticleTests.cpp  PhysicsListTests.cpp  ProcessTests.cpp  SelectorListTests.cpp
Tests/Physics/: CMakeLists.txt  EnergyLossSamplerTests.cpp  EnergyLossTests.cpp  ParametricNuclearIntStub.hpp  ParametricNuclearIntTests.cpp  ParametricNuclearIntTests2.cpp  ParametricNuclearInteractionTests.cpp  ScatteringSamplerTests.cpp  ScatteringTests.cpp  run1.mac
Tests/Physics/include/: B1ActionInitialization.hh  B1DetectorConstruction.hh  B1EventAction.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  B1SteppingAction.hh
Tests/Physics/src/: B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SteppingAction.cc
Tests/Plugins/: CMakeLists.txt  Geant4MaterialInteractionStub.hpp  Geant4MaterialInteractionTests.cpp
Tests/Samplers/: CMakeLists.txt  EnergyLossSamplerTests.cpp  HighlandScattererTests.cpp  ScatteringSamplerTests.cpp
Tests/Selectors/: CMakeLists.txt  KinematicCastsTests.cpp  LimitSelectorsTests.cpp  PdgSelectorsTests.cpp  SelectorHelpersTests.cpp
(+39 files in other folders)
